src/test/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/call-const-trait-method-fail.rs:25:5
   |
LL |     a.plus(b)
   |     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
